# envbuddel

./: .gitignore  Cargo.toml  LICENSE  README.md  env.enc
.github/workflows/: build.yml  continous-release.yml  release.yml
sample/config.env/: id_rsa.pub
sample/folders/: env.enc
sample/folders/decrypted/: id_rsa  kubeconfig.yaml
sample/init/: file.env.enc  vault.enc
sample/init/file.env/: test.txt
sample/single_file/: decrypted.env  env.enc
src/: crypto.rs  filepacker.rs  gitignore.rs  main.rs
