[package]
name = "envbuddel"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
base64 = "0.22.1"
rand = "0.9.2"
clap = { version = "4.5.48", features = ["derive", "env"] }
tar = "0.4.44"
serde = { version = "1.0.228", features = ["derive"] }
bincode = { version = "2.0.1", features = ["serde"] }
log = "0.4.28"
env_logger = "0.11.8"
