[package]
name = "envbuddel"
version = "0.1.16"
edition = "2021"

authors = ["RincewindWizzard <git@magierdinge.de>"]
description = "envbuddel is a file-based secret manager designed for CI/CD pipelines."
license = "LGPL-2.1"
repository = "https://github.com/RincewindWizzard/envbuddel"
homepage = "https://github.com/RincewindWizzard/envbuddel"
documentation = "https://github.com/RincewindWizzard/envbuddel"
readme = "README.md"
keywords = ["cli", "encryption", "environment", "tool"]
categories = ["command-line-utilities"]

[dependencies]
aes-gcm = "0.10.3"
base64 = "0.22.1"
rand = "0.9.2"
clap = { version = "4.5.48", features = ["derive", "env"] }
tar = "0.4.44"
serde = { version = "1.0.228", features = ["derive"] }
bincode = { version = "2.0.1", features = ["serde"] }
log = "0.4.28"
env_logger = "0.11.8"
base-x = "0.2.11"
tempfile = "3.23.0"
